if (NOT INIT_STATIC_MODULES)
    add_subdirectory(ambicode1)
    add_subdirectory(ambicode)
    add_subdirectory(buchla)
    add_subdirectory(cellular)
    add_subdirectory(counter)
    if (NOT WIN32)
        add_subdirectory(cpumeter)
    endif()
    add_subdirectory(cross2)
    add_subdirectory(date)
    add_subdirectory(dcblockr)
    add_subdirectory(exciter)
    add_subdirectory(fareyseq)
    add_subdirectory(filter)
    add_subdirectory(framebuffer)
    add_subdirectory(freeverb)
    add_subdirectory(ftconv)
    add_subdirectory(gammatone)
    add_subdirectory(liveconv)
    add_subdirectory(lufs)
    add_subdirectory(metro)
    add_subdirectory(minmax)
    add_subdirectory(modmatrix)
    add_subdirectory(platerev)
    add_subdirectory(pvsgendy)
    add_subdirectory(scoreline)
    add_subdirectory(select)
    add_subdirectory(seqtime)
    if (NOT NO_SERIAL_OPCODES)
        add_subdirectory(serial)
    endif()
    add_subdirectory(sterrain)
    add_subdirectory(system_call)
    add_subdirectory(tabsum)
    add_subdirectory(ugakbari)
    add_subdirectory(vaops)
    add_subdirectory(wterrain2)
endif()